fix: social links flex wrap on mobile

--- a/src/style/component.css
+++ b/src/style/component.css
@@ -212,8 +212,8 @@
 	}
 
 	.connect-links {
-		flex-direction: column;
-		gap: 8px;
+		flex-wrap: wrap;
+		gap: 8px 16px;
 	}
 }
 
